[gd_scene load_steps=16 format=3 uid="uid://clbdkdvt8q1yl"]

[ext_resource type="Texture2D" uid="uid://dda6wm0nc0jbh" path="res://src/Levels/Level2/ComeBossElevator-idle.png" id="1_c40xt"]
[ext_resource type="Script" uid="uid://d1q252lrt88c5" path="res://src/Levels/Level2/boss_elevator.gd" id="1_infl3"]
[ext_resource type="Texture2D" uid="uid://c7g3de8jufn2k" path="res://src/Levels/Level2/ComeBossElevator-opened.png" id="3_2y3gm"]
[ext_resource type="Texture2D" uid="uid://d2g5dxgygy3r4" path="res://src/Levels/Level2/panel_key.png" id="3_mjgno"]
[ext_resource type="Texture2D" uid="uid://d31q6xg5t6k4e" path="res://src/Levels/Level2/panel_sheep.png" id="5_tqatt"]

[sub_resource type="Animation" id="Animation_c40xt"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_c40xt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666666, 0.13333333, 0.2, 0.26666668, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_infl3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_c40xt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fb06i"]
resource_name = "opened"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2y3gm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666666, 0.13333333, 0.2, 0.26666668, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_elevator"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mjgno"]
_data = {
&"RESET": SubResource("Animation_infl3"),
&"idle": SubResource("Animation_c40xt"),
&"opened": SubResource("Animation_fb06i")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fb06i"]
size = Vector2(20, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_infl3"]

[sub_resource type="Animation" id="Animation_2y3gm"]
resource_name = "display"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.3, 1.8666667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(45, 0), Vector2(45, 60), Vector2(45, 45), Vector2(45, 45), Vector2(45, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.9666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_panel"
}]
}

[sub_resource type="Animation" id="Animation_tqatt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 56)]
}

[sub_resource type="Animation" id="Animation_ta2xq"]
resource_name = "display_sheep"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.3, 1.8666667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, 0), Vector2(8, 39), Vector2(8, 38), Vector2(8, 38), Vector2(8, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.9666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_sheep_panel"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fb06i"]
_data = {
&"RESET": SubResource("Animation_tqatt"),
&"display": SubResource("Animation_2y3gm"),
&"display_sheep": SubResource("Animation_ta2xq")
}

[node name="BossElevator" type="Node2D"]
script = ExtResource("1_infl3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_c40xt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mjgno")
}

[node name="gateArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="gateArea2D"]
position = Vector2(0, 65)
shape = SubResource("RectangleShape2D_fb06i")

[node name="lockArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lockArea2D"]
position = Vector2(32, 72)
shape = SubResource("RectangleShape2D_infl3")

[node name="panel_key" type="Node2D" parent="."]

[node name="PanelKey" type="Sprite2D" parent="panel_key"]
position = Vector2(64, 56)
texture = ExtResource("3_mjgno")

[node name="AnimationPlayer" type="AnimationPlayer" parent="panel_key"]
root_node = NodePath("../PanelKey")
libraries = {
&"": SubResource("AnimationLibrary_fb06i")
}

[node name="panel_sheep" type="Node2D" parent="."]

[node name="panel" type="Sprite2D" parent="panel_sheep"]
position = Vector2(64, 56)
texture = ExtResource("5_tqatt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="panel_sheep"]
root_node = NodePath("../panel")
libraries = {
&"": SubResource("AnimationLibrary_fb06i")
}

[connection signal="body_entered" from="gateArea2D" to="." method="_on_gate_area_2d_body_entered"]
[connection signal="body_entered" from="lockArea2D" to="." method="_on_lock_area_2d_body_entered"]
